fix smoothness of jumps, movements and fall

--- a/styles.css
+++ b/styles.css
@@ -58,6 +58,7 @@ h1 {
   font-style: normal;
   text-align: center;
   z-index: 1;
+  display: none;
 }
 
 .gameover-buttons {
